--- a/src/components/title/Title.css
+++ b/src/components/title/Title.css
@@ -1,8 +1,9 @@
 .title {
-    width: 100%;
+    width: 75%;
     text-align: right;
     font-size: 2rem;
-    color: #444;
+    color: crimson;
+    background-color: goldenrod;
     margin-bottom: 50px;
     padding-left: 3%;
     padding-right: 3%;  
